--- a/demo/create_dataset.ipynb
+++ b/demo/create_dataset.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "TRAIN_AREA = \"Galicia\"\n",
-    "TEST_AREA = \"Asturias\"\n",
+    "VAL_AREA = \"Asturias\"\n",
     "SELECTOR = \"leisure=swimming_pool\"\n",
     "DISCARD = {\"location\": \"indoor\"}\n",
     "CLASS_NAME = \"swimming_pool\""
@@ -126,7 +126,7 @@
    ],
    "source": [
     "download_osm(\n",
-    "    area=TEST_AREA,\n",
+    "    area=VAL_AREA,\n",
     "    output_dir=\"datasets\",\n",
     "    selector=SELECTOR,\n",
     "    discard=DISCARD,\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -201,7 +201,9 @@
    ],
    "source": [
     "group_elements_and_download_tiles(\n",
-    "    f\"datasets/{TEST_AREA}.json\", f\"datasets/{TEST_AREA}\", userdata.get(\"MAPBOX_TOKEN\")\n",
+    "    f\"datasets/{VAL_AREA}.json\", \n",
+    "    f\"datasets/{VAL_AREA}\", \n",
+    "    userdata.get(\"MAPBOX_TOKEN\")\n",
     ")"
    ]
   },
@@ -229,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "id": "cGJqL558-THJ"
    },
    "outputs": [],
    "source": [
-    "convert_to_yolo_dataset(f\"datasets/{TEST_AREA}\")"
+    "convert_to_yolo_dataset(f\"datasets/{VAL_AREA}\")"
    ]
   },
   {
@@ -270,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yolo.predict(list(Path(f\"datasets/{TEST_AREA}\").glob(\"*.jpg\"))[0], save=True)"
+    "yolo.predict(list(Path(f\"datasets/{VAL_AREA}\").glob(\"*.jpg\"))[0], save=True)"
    ]
   },
   {
@@ -285,7 +287,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "USER = \"daavoo\"\n",
+    "REPO = \"osm-swimming-pools\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the yaml config used by YOLO"
+   ]
   },
   {
    "cell_type": "code",
@@ -314,7 +326,7 @@
     "    f\"\"\"\n",
     "path: .\n",
     "train: {TRAIN_AREA}\n",
-    "val: {TEST_AREA}\n",
+    "val: {VAL_AREA}\n",
     "\n",
     "names:\n",
     "  0: {CLASS_NAME}\n",
@@ -329,7 +341,9 @@
     "id": "vhHuBREHAkap"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from huggingface_hub import HfApi"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,7 +352,9 @@
     "id": "V9EAJyQXAfmh"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "api = HfApi()"
+   ]
   },
   {
    "cell_type": "code",
@@ -366,7 +382,42 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "api.create_repo(f\"{USER}/{REPO}\", token=userdata.get(\"HF_TOKEN\"), repo_type=\"dataset\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zip -r train.zip datasets/{TRAIN_AREA}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!zip -r val.zip datasets/{VAL_AREA}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.upload_file(\n",
+    "    token=userdata.get(\"HF_TOKEN\"),\n",
+    "    path_or_fileobj=\"train.zip\",\n",
+    "    path_in_repo=\"train.zip\",\n",
+    "    repo_id=f\"{USER}/{REPO}\",\n",
+    "    repo_type=\"dataset\",\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
