--- a/demo/finetune_model.ipynb
+++ b/demo/finetune_model.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "6Tq7F_Kyi4V6"
+   },
+   "source": [
+    "# Finetune a YOLO model using a dataset from OpenStreetMap data and Mapbox tiles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "tc54-OyDjbT5"
+   },
+   "source": [
+    "## Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -9,6 +27,27 @@
    "outputs": [],
    "source": [
     "%pip install --quiet ultralytics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "kNhyzcUXjdws"
+   },
+   "source": [
+    "## Download dataset from HuggingFace Hub Datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "9e_3WF8_jgRm"
+   },
+   "source": [
+    "You need to set the `HF_TOKEN` Colab secret:\n",
+    "\n",
+    "- Create an account: https://huggingface.co/join\n",
+    "- Follow this guide about [`User Access Tokens`](https://huggingface.co/docs/hub/security-tokens)"
    ]
   },
   {
@@ -30,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "REPO = \"daavoo/osm-swimming-pools\""
+    "REPO = \"mozilla-ai/osm-swimming-pools\""
    ]
   },
   {
@@ -76,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "!unzip datasets/train.zip"
+    "!unzip -q datasets/train.zip"
    ]
   },
   {
@@ -87,7 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "!unzip datasets/val.zip"
+    "!unzip -q datasets/val.zip"
    ]
   },
   {
@@ -111,6 +150,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "TqEFsZwiqmPV"
+   },
+   "source": [
+    "Check the [available models](https://docs.ultralytics.com/tasks/detect/#models)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "lV8Yl6SnjmsV"
+   },
+   "outputs": [],
+   "source": [
+    "MODEL = \"yolo11m.pt\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -118,7 +177,7 @@
    },
    "outputs": [],
    "source": [
-    "yolo = YOLO(\"yolo11m.pt\")"
+    "yolo = YOLO(MODEL)"
    ]
   },
   {
@@ -129,7 +188,14 @@
    },
    "outputs": [],
    "source": [
-    "yolo.train(data=\"datasets/yolo_dataset.yaml\", patience=3, imgsz=512)"
+    "yolo.train(\n",
+    "    data=\"datasets/yolo_dataset.yaml\",\n",
+    "    patience=3,\n",
+    "    imgsz=512,\n",
+    "    scale=0.0,\n",
+    "    flipud=0.5,\n",
+    "    translate=0.0,\n",
+    ")"
    ]
   },
   {
