--- a/demo/run_inference.ipynb
+++ b/demo/run_inference.ipynb
@@ -69,6 +69,8 @@
    },
    "source": [
     "You need to set the following secrets in the notebook.\n",
+    "\n",
+    "Check the [Authorization Guide](https://mozilla-ai.github.io/osm-ai-helper/authorization) in the docs to learn how to obtain them.\n",
     "\n"
    ]
   },
@@ -371,7 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of additional tiles to load around the provided lat_lon\n",
+    "MARGIN = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -418,6 +430,7 @@
     "    \"models/model.pt\",\n",
     "    output_dir=\"results\",\n",
     "    lat_lon=(LAT, LON),\n",
+    "    margin=MARGIN,\n",
     ")"
    ]
   },
